...
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/caloriesPerHourValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:hint="325"
                            android:inputType="number"
                            android:maxLength="4"
                            android:text="450"
                            android:textAlignment="textEnd"
                            android:textColor="#0019FF"
                            android:textSize="16sp"
                            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                        <TextView
...
                            android:layout_weight="1"
                            android:text="@string/calPerHour"
                            android:textSize="16sp"
                            tools:ignore="TextContrastCheck" />

                        <Spinner
                            android:id="@+id/intensitySpinner"
                            style="@style/mySpinnerItemStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:entries="@array/spinnerItems"
                            tools:ignore="TouchTargetSizeCheck" />
...
                            android:layout_marginBottom="4dp"
                            android:text="@string/workoutsPerWeek"
                            android:textSize="16sp"
                            tools:ignore="TextContrastCheck" />

                        <EditText
                            android:id="@+id/workoutsPerWeekValue"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:hint="7"
                            android:inputType="number"
...
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/workoutLengthValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_weight="1"
                                android:background="@android:color/transparent"
                                android:hint="2.25"
...
