...
    <string name="averageWorkoutLength">Average workout length:</string>
    <string name="basicMetabolicRate">Basic Metabolic Rate</string>
    <string name="bmr">BMR = </string>
    <string name="calBurnedPerWorkout">Calories burned per workout:</string>
    <string name="calPerDay">Calories/day</string>
    <string name="calPerHour">cal/hr</string>
    <string name="cancel">Cancel</string>
    <string name="dailyCalorieNeeds">Daily Calorie Needs: </string>
    <string name="dailyCalorieNeedsMessage">Daily calorie needs by activity level: </string>
    <string name="inches">inches</string>
    <string name="inchesQuantity">%1$d in.</string>
    <string name="none">None</string>
    <string name="pounds">pounds</string>
...
    <string name="name">Name</string>c
    <string name="sedentaryRowLabel">Sedentary</string>
    <string name="setAge">Set age</string>
    <string name="setHeight">Set height</string>
    <string name="setWeight">Set weight</string>
    <string name="sexLabel">Sex:</string>
    <string name="submit">Submit</string>
    <string name="temperature">Temperature</string>
    <string name="temperatureErrorMessage">There was a problem getting the temperature :(</string>
    <string name="temperatureFarenheit">%1$d °F</string>
    <string name="weightLabel">Weight:</string>
    <string name="workoutsPerWeek">Workouts per week:</string>
    <string name="workoutIntensity">Workout intensity:</string>
...
