<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.NumberPickerFragment"
    android:id="@+id/numberPickerFragmentContainer">

    <NumberPicker
        android:id="@+id/numberPickerNumberPicker"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/numberPickerUnitsLabel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:padding="20dp"
        tools:text="UNITS"/>

</LinearLayout>