...
                        android:drawableTop="@drawable/profile_icon"
                        android:text="@string/prof_button"
                        android:textSize="12sp"
                        tools:backgroundTint="@color/buttonBlue" />

                    <Button
                        android:id="@+id/bmr_main_fragment_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/buttonGreen"
                        android:contentDescription="@string/bmr_button"
                        android:drawableTop="@drawable/bmr_icon"
...
